--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,2 +1,3 @@
 # your data base url
 DATABASE_URL="postgresql://user:pass@ep-xxx-dev..."
+JWT_SECRET="your-super-secret-key-at-least-32-characters-long"
