feat: add GitHub OAuth authentication

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,3 +1,6 @@
 # your data base url
 DATABASE_URL="postgresql://user:pass@ep-xxx-dev..."
 JWT_SECRET="your-super-secret-key-at-least-32-characters-long"
+GITHUB_ID=
+GITHUB_SECRET=
+GITHUB_CALLBACK_URL=
