feat: add Google OAuth integration

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,6 +1,14 @@
 # your data base url
 DATABASE_URL="postgresql://user:pass@ep-xxx-dev..."
+
 JWT_SECRET="your-super-secret-key-at-least-32-characters-long"
+
 GITHUB_ID=
 GITHUB_SECRET=
 GITHUB_CALLBACK_URL=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+
+FRONTEND_URL="Frontend-URL"
