--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,4 +1,3 @@
-# your data base url
 DATABASE_URL="postgresql://user:pass@ep-xxx-dev..."
 
 JWT_SECRET="your-super-secret-key-at-least-32-characters-long"
@@ -12,3 +11,8 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 
 FRONTEND_URL="Frontend-URL"
+
+RESEND_API_KEY=
+FROM_EMAIL=<custom-email>@envsync.tech
+APP_NAME=EnvSync
+API_URL="api-url"
