fix(ci): change trigger branch from main to master

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -2,7 +2,7 @@ name: Deploy API
 
 on:
   push:
-    branches: [main]
+    branches: [master]
     paths:
       - "apps/api/**" # Trigger if API code changes
       - "libs/**" # Trigger if shared libs change
