--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,21 +1,47 @@
 {
-  "name": "cli",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "envsync",
+  "version": "0.1.0",
+  "description": "E2E encrypted secrets management CLI",
+  "author": "Salman Abdellatif",
+  "license": "MIT",
+  "type": "module",
+  "main": "dist/index.js",
+  "bin": {
+    "envsync": "./dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.26.2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/salmanabdellatif/EnvSync"
+  },
+  "keywords": [
+    "env",
+    "secrets",
+    "encryption",
+    "e2e",
+    "dotenv",
+    "cli"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsx src/index.ts"
+  },
   "dependencies": {
-    "commander": "^14.0.2"
+    "axios": "^1.13.2",
+    "chalk": "^5.6.2",
+    "commander": "^14.0.2",
+    "conf": "^15.0.2",
+    "dotenv": "^17.2.3",
+    "inquirer": "^13.1.0",
+    "open": "^11.0.0",
+    "ora": "^9.0.0"
   },
   "devDependencies": {
+    "@types/inquirer": "^9.0.9",
     "@types/node": "^25.0.3",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
-  }
+  },
+  "packageManager": "pnpm@10.26.2"
 }
