--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,8 @@
     "@nestjs/throttler": "^6.5.0",
     "@prisma/adapter-neon": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@react-email/components": "^1.0.6",
+    "@react-email/render": "^2.0.4",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -40,6 +42,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.6.0",
     "rxjs": "^7.8.1",
@@ -60,6 +64,8 @@
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/supertest": "^6.0.2",
     "dotenv": "^17.2.3",
     "eslint": "^9.18.0",
