update(api): update .env.example

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -16,6 +16,6 @@ GOOGLE_CALLBACK_URL=
 FRONTEND_URL="Frontend-URL"
 
 RESEND_API_KEY=
-FROM_EMAIL=<custom-email>@envsync.tech
+FROM_EMAIL=<custom-email>@<your-domain-name>
 APP_NAME=EnvSync
 API_URL="api-url"
