trigger(api): redeploy

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,7 +3,7 @@ DATABASE_URL="postgresql://user:pass@ep-xxx-dev..."
 JWT_SECRET="your-super-secret-key-at-least-32-characters-long"
 JWT_EXPIRATION=7d
 
-AUTH_COOKIE_MAX_AGE=604800000 # 7 days
+AUTH_COOKIE_MAX_AGE=604800000
 
 GITHUB_ID=
 GITHUB_SECRET=
